Fix images too big problem.

--- a/brian/local.css
+++ b/brian/local.css
@@ -98,7 +98,7 @@ code {
 }
 
 img { 
-  border: 0; 
+  max-width: 100%;
 }
 
 .photo {
